--- a/myApp/src/pages/screening-modal-fcs/screening-modal-fcs.html
+++ b/myApp/src/pages/screening-modal-fcs/screening-modal-fcs.html
@@ -25,50 +25,32 @@
       Right Ankle Clearing
     </ion-list-header>
 
+  </ion-list>
+
+  <ion-grid text-center class="screening">
+
     <ion-row>
-      <ion-col col-12>
-        <p style="line-height: 0; margin:15px 0;"><strong>Knee position:</strong></p>
-        <ion-segment>
-          <ion-segment-button value="behind_malleolus">
-            <small>Behind Malleolus</small>
-          </ion-segment-button>
-          <ion-segment-button value="within_malleolus">
-            <small>Within Malleolus</small>
-          </ion-segment-button>
-          <ion-segment-button value="beyond_malleolus">
-            <small>Beyond Malleolus</small>
-          </ion-segment-button>
-        </ion-segment>
+      <ion-col col-4 >
+        <p style="margin:15px 0;"><strong>Knee position</strong></p>
+        <ion-badge color="secondary">Behind</ion-badge>
 
-        <p style="line-height: 0; margin:15px 0;"><strong>Pain with movement</strong></p>
-
-        <ion-segment>
-          <ion-segment-button value="yes">
-            Yes
-          </ion-segment-button>
-          <ion-segment-button value="no">
-            No
-          </ion-segment-button>
-        </ion-segment>
-
-        <p style="line-height: 0; margin:15px 0;"><strong>Where did you feel it?</strong></p>
-
-        <ion-segment>
-          <ion-segment-button value="front_of_ankle">
-            Front of Ankle
-          </ion-segment-button>
-          <ion-segment-button value="back_of_ankle">
-            Back of Leg
-          </ion-segment-button>
-          <ion-segment-button value="no_stretch_felt">
-            No Stretch Felt
-          </ion-segment-button>
-        </ion-segment>
       </ion-col>
 
-    </ion-row>
+      <ion-col col-4 >
+        <p style="margin:15px 0;"><strong>Pain?</strong></p>
+        <ion-badge color="secondary">No</ion-badge>
 
-  </ion-list>
+      </ion-col>
+
+      <ion-col col-4 >
+        <p style="margin:15px 0;"><strong>Stretch felt?</strong></p>
+        <ion-badge color="secondary">Front of Ankle</ion-badge>
+
+      </ion-col>
+
+
+    </ion-row>
+  </ion-grid>
 
 
 
@@ -78,48 +60,30 @@
       Left Ankle Clearing
     </ion-list-header>
 
-    <ion-row>
-      <ion-col col-12>
-        <p style="line-height: 0; margin:15px 0;"><strong>Knee position:</strong></p>
-        <ion-segment>
-          <ion-segment-button value="behind_malleolus">
-            <small>Behind Malleolus</small>
-          </ion-segment-button>
-          <ion-segment-button value="within_malleolus">
-            <small>Within Malleolus</small>
-          </ion-segment-button>
-          <ion-segment-button value="beyond_malleolus">
-            <small>Beyond Malleolus</small>
-          </ion-segment-button>
-        </ion-segment>
+    <ion-grid text-center class="screening">
 
-        <p style="line-height: 0; margin:15px 0;"><strong>Pain with movement</strong></p>
+      <ion-row>
+        <ion-col col-4 >
+          <p style="margin:15px 0;"><strong>Knee position</strong></p>
+          <ion-badge color="secondary">Behind</ion-badge>
 
-        <ion-segment>
-          <ion-segment-button value="yes">
-            Yes
-          </ion-segment-button>
-          <ion-segment-button value="no">
-            No
-          </ion-segment-button>
-        </ion-segment>
+        </ion-col>
 
-        <p style="line-height: 0; margin:15px 0;"><strong>Where did you feel it?</strong></p>
+        <ion-col col-4 >
+          <p style="margin:15px 0;"><strong>Pain?</strong></p>
+          <ion-badge color="secondary">No</ion-badge>
 
-        <ion-segment>
-          <ion-segment-button value="front_of_ankle">
-            Front of Ankle
-          </ion-segment-button>
-          <ion-segment-button value="back_of_ankle">
-            Back of Leg
-          </ion-segment-button>
-          <ion-segment-button value="no_stretch_felt">
-            No Stretch Felt
-          </ion-segment-button>
-        </ion-segment>
-      </ion-col>
+        </ion-col>
 
-    </ion-row>
+        <ion-col col-4 >
+          <p style="margin:15px 0;"><strong>Stretch felt?</strong></p>
+          <ion-badge color="secondary">Front of Ankle</ion-badge>
+
+        </ion-col>
+
+
+      </ion-row>
+    </ion-grid>
 
   </ion-list>
 
