--- a/myApp/src/pages/screening-modal-fcs-lowermcs/screening-modal-fcs-lowermcs.html
+++ b/myApp/src/pages/screening-modal-fcs-lowermcs/screening-modal-fcs-lowermcs.html
@@ -7,7 +7,7 @@
 <ion-header color="dark">
   <ion-toolbar color="dark">
     <ion-title>
-      Lower MCS
+      {{character.name}}
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
@@ -20,15 +20,19 @@
 
 <ion-content>
 
+<ion-item>
+  <ion-label *ngIf="toggleValue === false">Inches</ion-label>
+  <ion-label *ngIf="toggleValue === true">Centimeters</ion-label>
+  <ion-toggle [(ngModel)]="toggleValue" color="secondary"></ion-toggle>
+</ion-item>
+
   <ion-list>
-    <ion-list-header>
+    <ion-list-header color="light">
       Foot length
     </ion-list-header>
 
     <ion-item>
-      <ion-range min="0" max="22" pin="true" [(ngModel)]="foot_length" color="secondary">
-      </ion-range>
-      <ion-badge color="secondary" item-right>{{foot_length}} in</ion-badge>
+      <ion-input type="text" placeholder="input foot length"></ion-input>
     </ion-item>
 
   </ion-list>
@@ -36,27 +40,29 @@
 
 
   <ion-list>
-    <ion-list-header>
+    <ion-list-header color="light">
       Left Max Reach Distance
     </ion-list-header>
 
     <ion-item>
       <ion-range min="0" max="114" pin="true" [(ngModel)]="Left_max_reach_distance" color="secondary">
       </ion-range>
-      <ion-badge color="secondary" item-right>{{Left_max_reach_distance}} in</ion-badge>
+      <ion-badge color="secondary" item-right>{{Left_max_reach_distance}} <span *ngIf="toggleValue === false">IN</span>
+        <span *ngIf="toggleValue === true">CM</span></ion-badge>
     </ion-item>
 
   </ion-list>
 
   <ion-list>
-    <ion-list-header>
+    <ion-list-header color="light">
       Right Max Reach Distance
     </ion-list-header>
 
     <ion-item>
       <ion-range min="0" max="114" pin="true" [(ngModel)]="right_max_reach_distance" color="secondary">
       </ion-range>
-      <ion-badge color="secondary" item-right>{{right_max_reach_distance}} in</ion-badge>
+      <ion-badge color="secondary" item-right>{{right_max_reach_distance}} <span *ngIf="toggleValue === false">IN</span>
+        <span *ngIf="toggleValue === true">CM</span></ion-badge>
     </ion-item>
 
   </ion-list>
