--- a/myApp/src/pages/screening-modal-ybt/screening-modal-ybt.html
+++ b/myApp/src/pages/screening-modal-ybt/screening-modal-ybt.html
@@ -4,15 +4,65 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>screening-modal-ybt</ion-title>
-  </ion-navbar>
-
+<ion-header color="dark">
+  <ion-toolbar color="dark">
+    <ion-title>
+      {{character.name}}
+    </ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="dismiss()">
+        <span ion-text showWhen="ios">Close</span>
+        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
+<ion-content>
 
-<ion-content padding>
+  <ion-item>
+    <ion-label *ngIf="toggleValue === false">Inches</ion-label>
+    <ion-label *ngIf="toggleValue === true">Centimeters</ion-label>
+    <ion-toggle [(ngModel)]="toggleValue" color="light"></ion-toggle>
+  </ion-item>
+
+
+
+  <ion-list>
+    <ion-list-header color="light">
+      Right {{character.name}}
+    </ion-list-header>
+
+    <ion-item>
+      <ion-item>
+        <ion-input type="text" placeholder="max distance"></ion-input>
+      </ion-item>
+      <ion-badge color="secondary" item-right>{{Right_max_reach_distance}} <span *ngIf="toggleValue === false">IN</span>
+        <span *ngIf="toggleValue === true">CM</span></ion-badge>
+    </ion-item>
+
+  </ion-list>
+
+  <ion-list>
+    <ion-list-header color="light">
+      Left {{character.name}}
+    </ion-list-header>
+
+    <ion-item>
+      <ion-item>
+        <ion-input type="text" placeholder="max distance"></ion-input>
+      </ion-item>
+      <ion-badge color="secondary" item-right>{{Left_max_reach_distance}} <span *ngIf="toggleValue === false">IN</span>
+        <span *ngIf="toggleValue === true">CM</span></ion-badge>
+    </ion-item>
+
+  </ion-list>
+
+
+
+
+
+
+  <button ion-button full block (click)="dismiss()" color="secondary" >Save</button>
 
 </ion-content>
