modify carry modal

--- a/myApp/src/pages/screening-modal-fcs-carry/screening-modal-fcs-carry.html
+++ b/myApp/src/pages/screening-modal-fcs-carry/screening-modal-fcs-carry.html
@@ -65,7 +65,26 @@
   </ion-list>
 
 
+  <ion-grid class="carry" style="max-width: 330px">
+    <ion-row>
+      <ion-col col-3 >
+        <img src="../../assets/img/fcs-carry1.svg" style="height: 80px"/>
+      </ion-col>
 
+      <ion-col col-3>
+        <img src="../../assets/img/fcs-carry2.svg" style="height: 80px; padding-top: 24px;"/>
+      </ion-col>
+
+      <ion-col col-3>
+        <img src="../../assets/img/fcs-carry3.svg" style="height: 80px; padding-top: 24px;"/>
+      </ion-col>
+
+      <ion-col col-3>
+        <img src="../../assets/img/fcs-carry4.svg" style="height: 80px; margin-left: -1px;"/>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
 
   <button ion-button full block (click)="dismiss()" color="secondary" >Save</button>
 
