--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -31,11 +31,16 @@
     </ion-row>
 
     <ion-row>
-      <ion-col col-12 text-center [navPush]="pushPage" [navParams]="params">
+      <ion-col col-6 text-center [navPush]="pushPageMove2performPage" [navParams]="params">
+        <p>Move2Perform</p>
+      </ion-col>
+      <ion-col col-6 text-center [navPush]="pushPage" [navParams]="params">
         <img src="../../assets/img/manage-clients-01.svg" style="max-height: 80px"/>
         <p>Manage Clients</p>
       </ion-col>
     </ion-row>
+
+
 
   </ion-grid>
   <ion-item-divider color="light">Survey</ion-item-divider>
