--- a/myApp/src/pages/m2p-sub2/m2p-sub2.html
+++ b/myApp/src/pages/m2p-sub2/m2p-sub2.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the M2pSub1Page page.
+  Generated template for the M2pSub2Page page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,13 +7,14 @@
 <ion-header color="dark">
 
   <ion-navbar color="dark">
-    <ion-title>Movement Efficiency Report</ion-title>
+    <ion-title>Movement Foundation Report</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content >
+<ion-content>
+
   <ion-list no-lines>
     <ion-list-header color="light">
       Movement Foundation
@@ -28,12 +29,52 @@
 
     </ion-item>
     <ion-item>
-      <ion-label>Breathing Screen</ion-label>
+      <ion-label>Medical History</ion-label>
       <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/medical_history.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+    <ion-item>
+      <ion-label>Surgeries</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/surgeries.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Previous Injuries</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/previous_injuries.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Breathing Screen</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
       <div item-left text-center style="width: 30px;">
         <img src="../../assets/img/move2perform/breathing_screen.svg" style="height: 30px;"/>
       </div>
     </ion-item>
+
+    <ion-item>
+      <ion-label>Lung Capacity</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/breathing_screen.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Questionnaire</ion-label>
+      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
+      <div item-left text-center style="width: 30px;">
+        <img src="../../assets/img/move2perform/questionnaire.svg" style="height: 30px;"/>
+      </div>
+    </ion-item>
+
     <ion-item>
       <ion-label>Functional Movement Screen</ion-label>
       <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
@@ -42,66 +83,15 @@
       </div>
     </ion-item>
 
-
-  </ion-list>
-
-  <ion-list no-lines>
-    <ion-list-header color="light">
-      Movement Foundation
-    </ion-list-header>
-
     <ion-item>
-      <ion-label>Functional Movement Screen</ion-label>
+      <ion-label>Extension Clearing Test</ion-label>
       <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
       <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/movement_screen.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Y-Balance Test</ion-label>
-      <ion-checkbox color="fmsBlue" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/y_balance_test.svg" style="height: 30px;"/>
+        <img src="../../assets/img/move2perform/extension_clearing_test.svg" style="height: 30px;"/>
       </div>
     </ion-item>
 
 
   </ion-list>
 
-  <ion-list no-lines>
-    <ion-list-header color="light">
-      Movement Performance
-    </ion-list-header>
-
-    <ion-item>
-      <ion-label>Movement Control</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/movement_control.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Postural Control</ion-label>
-      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/postural_control.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Impact Control</ion-label>
-      <ion-checkbox color="primary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/impact_control.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-    <ion-item>
-      <ion-label>Explosive Control</ion-label>
-      <ion-checkbox color="secondary" item-right checked="true"></ion-checkbox>
-      <div item-left text-center style="width: 30px;">
-        <img src="../../assets/img/move2perform/explosive_control.svg" style="height: 30px;"/>
-      </div>
-    </ion-item>
-
-
-  </ion-list>
 </ion-content>
