--- a/myApp/src/pages/move2perform/move2perform.html
+++ b/myApp/src/pages/move2perform/move2perform.html
@@ -19,5 +19,11 @@
     <button ion-item [navPush]="pushPageM2pSub1">
       Movement Efficiency Report
     </button>
+    <button ion-item [navPush]="pushPageM2pSub2">
+      Movement Foundation Report
+    </button>
+    <button ion-item [navPush]="pushPageM2pSub3">
+      Movement Function Report
+    </button>
   </ion-list>
 </ion-content>
