add report pages

--- a/myApp/src/pages/move2perform/move2perform.html
+++ b/myApp/src/pages/move2perform/move2perform.html
@@ -25,5 +25,12 @@
     <button ion-item [navPush]="pushPageM2pSub3">
       Movement Function Report
     </button>
+    <button ion-item [navPush]="pushPageM2pSub4">
+      Movement Performance Report
+    </button>
+    <button ion-item [navPush]="pushPageM2pSub5">
+      Movement Efficiency Report
+    </button>
+
   </ion-list>
 </ion-content>
